<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.NavigationView
        android:id="@+id/vNavigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivMenuUserProfilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/ic_radio_grey_24dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="10dp"
                            android:weightSum="5">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:text="@string/setting_radio_title"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/radioStationNameId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="Antena live" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/ic_artist_grey_24dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="10dp"
                            android:weightSum="5">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:text="@string/setting_air_title"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/songNameId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:ellipsize="marquee"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:scrollHorizontally="true"
                                android:singleLine="true"
                                android:text="Unknown" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorDivider" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/setting_autoplay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_autoplay" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/setting_keep_articles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_keep_articles" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="10sp" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/material_language_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_arrow_tint="@color/md_deep_orange_500" />

                </LinearLayout>


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/setting_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_about"
                    android:theme="@style/AntenaButtonStyleColored" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/setting_tutorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tutorial"
                    android:theme="@style/AntenaButtonStyleColored" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/setting_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_feedback"
                    android:theme="@style/AntenaButtonStyleColored" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/setting_third_party"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_third_party"
                    android:theme="@style/AntenaButtonStyleColored" />
            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.NavigationView>

</RelativeLayout>